# bigTrade

./: .gitignore  README.md  docker-compose.yml
api/: README.md  main.py  pyproject.toml
api/app/: config.py  logger.py  models.py  schemas.py
api/app/db/: models.py  repositories.py  session.py
api/app/routers/: ingest.py
api/app/services/: ingest.py
db/: trading_ml_schema.sql
db/migrations/: 20260416_repair_feature_schema.sql
mt5/: EA_MarketDataCollector.mq5
pgadmin/: bootstrap-servers.sh  servers.json
