[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "ruff>=0.15.10",
    "uvicorn>=0.44.0",
]
